--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,14 @@
          version="4.0">
 
     <display-name>Topjava</display-name>
+    <!--    <context-param>-->
+    <!--        <param-name>contextConfigLocation</param-name>-->
+    <!--        <param-value>classpath:spring/spring-app.xml,classpath:spring/spring-db.xml</param-value>-->
+    <!--    </context-param>-->
+    <!--    <context-param>-->
+    <!--        <param-name>spring.profiles.active</param-name>-->
+    <!--        <param-value>meals_jdbc</param-value>-->
+    <!--    </context-param>-->
 
     <servlet>
         <servlet-name>userServlet</servlet-name>
@@ -25,5 +33,4 @@
         <servlet-name>mealServlet</servlet-name>
         <url-pattern>/meals</url-pattern>
     </servlet-mapping>
-
 </web-app>
